infrastructure/technitium/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: technitium
  labels:
    # Restricted by the validate-restricted policy.
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
