infrastructure/technitium/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: technitium
  annotations:
    external-dns.kubernetes.io/target: node.${DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: dns.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium
                port:
                  name: http
    - host: doh.${DOMAIN}
      http:
        paths:
          - path: /dns-query
            pathType: Prefix
            backend:
              service:
                name: technitium
                port:
                  name: doh
